deploy: 82981a2115dc78fa59bcb036ee6c1b6176e10249

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae5b27b1",
+   "id": "fabbbfd1",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d84194be",
+   "id": "2c8315d2",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12131abe",
+   "id": "15632d29",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fc70e46",
+   "id": "42d46e22",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98ef57a9",
+   "id": "2e1014a5",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd5ba4ba",
+   "id": "6832650f",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5fb0c939",
+   "id": "3d7c6ce3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:25.010643Z",
-     "iopub.status.busy": "2025-01-30T10:01:25.010450Z",
-     "iopub.status.idle": "2025-01-30T10:01:28.566894Z",
-     "shell.execute_reply": "2025-01-30T10:01:28.566359Z"
+     "iopub.execute_input": "2025-01-30T10:17:26.667527Z",
+     "iopub.status.busy": "2025-01-30T10:17:26.667352Z",
+     "iopub.status.idle": "2025-01-30T10:17:29.753330Z",
+     "shell.execute_reply": "2025-01-30T10:17:29.752787Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa7f7664",
+   "id": "68373d28",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7336fbc6",
+   "id": "20a6d4fb",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fd8db36",
+   "id": "ef530118",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3fa0d53",
+   "id": "a97de96e",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cceab3f7",
+   "id": "a170ba08",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40a551b3",
+   "id": "6d886785",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "271a26a4",
+   "id": "d2a7b38c",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e826c6e5",
+   "id": "86bff71d",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "45f9a601",
+   "id": "92dd1f77",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:28.569198Z",
-     "iopub.status.busy": "2025-01-30T10:01:28.568723Z",
-     "iopub.status.idle": "2025-01-30T10:01:31.023221Z",
-     "shell.execute_reply": "2025-01-30T10:01:31.022659Z"
+     "iopub.execute_input": "2025-01-30T10:17:29.755680Z",
+     "iopub.status.busy": "2025-01-30T10:17:29.755218Z",
+     "iopub.status.idle": "2025-01-30T10:17:31.971337Z",
+     "shell.execute_reply": "2025-01-30T10:17:31.970699Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d2266e",
+   "id": "7bd72d8e",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3e93bd29",
+   "id": "7e38d0ad",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:31.025352Z",
-     "iopub.status.busy": "2025-01-30T10:01:31.024923Z",
-     "iopub.status.idle": "2025-01-30T10:01:31.028646Z",
-     "shell.execute_reply": "2025-01-30T10:01:31.028041Z"
+     "iopub.execute_input": "2025-01-30T10:17:31.973703Z",
+     "iopub.status.busy": "2025-01-30T10:17:31.973066Z",
+     "iopub.status.idle": "2025-01-30T10:17:31.976910Z",
+     "shell.execute_reply": "2025-01-30T10:17:31.976295Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6ebee71",
+   "id": "8c3b2494",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6576a68d",
+   "id": "3f9a3368",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "addc8d76",
+   "id": "ba85853f",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1a6b0c3",
+   "id": "103a7a58",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "523ae422",
+   "id": "79bafb64",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:31.030716Z",
-     "iopub.status.busy": "2025-01-30T10:01:31.030377Z",
-     "iopub.status.idle": "2025-01-30T10:01:31.079364Z",
-     "shell.execute_reply": "2025-01-30T10:01:31.078663Z"
+     "iopub.execute_input": "2025-01-30T10:17:31.978850Z",
+     "iopub.status.busy": "2025-01-30T10:17:31.978536Z",
+     "iopub.status.idle": "2025-01-30T10:17:32.025141Z",
+     "shell.execute_reply": "2025-01-30T10:17:32.024577Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f0989b3",
+   "id": "49987a7d",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f6afc365",
+   "id": "a2dda944",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:31.081570Z",
-     "iopub.status.busy": "2025-01-30T10:01:31.081039Z",
-     "iopub.status.idle": "2025-01-30T10:01:31.160700Z",
-     "shell.execute_reply": "2025-01-30T10:01:31.160068Z"
+     "iopub.execute_input": "2025-01-30T10:17:32.027059Z",
+     "iopub.status.busy": "2025-01-30T10:17:32.026864Z",
+     "iopub.status.idle": "2025-01-30T10:17:32.100959Z",
+     "shell.execute_reply": "2025-01-30T10:17:32.100424Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84f97751",
+   "id": "67c539b6",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f0ece52",
+   "id": "c97f6017",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f34949d0",
+   "id": "dfcdb5a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:31.162990Z",
-     "iopub.status.busy": "2025-01-30T10:01:31.162592Z",
-     "iopub.status.idle": "2025-01-30T10:01:31.197747Z",
-     "shell.execute_reply": "2025-01-30T10:01:31.197187Z"
+     "iopub.execute_input": "2025-01-30T10:17:32.102739Z",
+     "iopub.status.busy": "2025-01-30T10:17:32.102550Z",
+     "iopub.status.idle": "2025-01-30T10:17:32.133979Z",
+     "shell.execute_reply": "2025-01-30T10:17:32.133461Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70ba6fb",
+   "id": "3a7d0cd5",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "949db1fd",
+   "id": "f33a77e4",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3c15877",
+   "id": "fdc36ec9",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8c7342",
+   "id": "755d99d4",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97e12ac9",
+   "id": "2c9a1ffc",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5f432a92",
+   "id": "d496b393",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:31.199941Z",
-     "iopub.status.busy": "2025-01-30T10:01:31.199566Z",
-     "iopub.status.idle": "2025-01-30T10:01:31.204580Z",
-     "shell.execute_reply": "2025-01-30T10:01:31.203851Z"
+     "iopub.execute_input": "2025-01-30T10:17:32.136091Z",
+     "iopub.status.busy": "2025-01-30T10:17:32.135711Z",
+     "iopub.status.idle": "2025-01-30T10:17:32.140075Z",
+     "shell.execute_reply": "2025-01-30T10:17:32.139549Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a0152d",
+   "id": "3b347418",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6211d9b2",
+   "id": "69dfaf1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:31.206671Z",
-     "iopub.status.busy": "2025-01-30T10:01:31.206453Z",
-     "iopub.status.idle": "2025-01-30T10:01:31.209737Z",
-     "shell.execute_reply": "2025-01-30T10:01:31.209092Z"
+     "iopub.execute_input": "2025-01-30T10:17:32.141930Z",
+     "iopub.status.busy": "2025-01-30T10:17:32.141626Z",
+     "iopub.status.idle": "2025-01-30T10:17:32.144634Z",
+     "shell.execute_reply": "2025-01-30T10:17:32.143987Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acfbdaca",
+   "id": "c7a7f8b2",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7965a340",
+   "id": "60258134",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:31.211779Z",
-     "iopub.status.busy": "2025-01-30T10:01:31.211394Z",
-     "iopub.status.idle": "2025-01-30T10:01:34.114472Z",
-     "shell.execute_reply": "2025-01-30T10:01:34.113774Z"
+     "iopub.execute_input": "2025-01-30T10:17:32.146404Z",
+     "iopub.status.busy": "2025-01-30T10:17:32.146050Z",
+     "iopub.status.idle": "2025-01-30T10:17:34.830217Z",
+     "shell.execute_reply": "2025-01-30T10:17:34.829613Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa810dc",
+   "id": "b2a3323b",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13d21b4e",
+   "id": "848432bf",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22bff3bc",
+   "id": "da395d32",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c8c6c0",
+   "id": "acdabcb3",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1ddf0ce2",
+   "id": "2db43be7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:34.116782Z",
-     "iopub.status.busy": "2025-01-30T10:01:34.116378Z",
-     "iopub.status.idle": "2025-01-30T10:01:34.120137Z",
-     "shell.execute_reply": "2025-01-30T10:01:34.119486Z"
+     "iopub.execute_input": "2025-01-30T10:17:34.832296Z",
+     "iopub.status.busy": "2025-01-30T10:17:34.831924Z",
+     "iopub.status.idle": "2025-01-30T10:17:34.835820Z",
+     "shell.execute_reply": "2025-01-30T10:17:34.835281Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f430c40bec0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fbf2c6bbec0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3768d5be",
+   "id": "a00a19e7",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d28feadf",
+   "id": "7481db87",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc6c6b6d",
+   "id": "45c69a5c",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6574708e",
+   "id": "dec59531",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "210b5f4e",
+   "id": "1c5a00a2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:34.122236Z",
-     "iopub.status.busy": "2025-01-30T10:01:34.121854Z",
-     "iopub.status.idle": "2025-01-30T10:01:34.125140Z",
-     "shell.execute_reply": "2025-01-30T10:01:34.124475Z"
+     "iopub.execute_input": "2025-01-30T10:17:34.837622Z",
+     "iopub.status.busy": "2025-01-30T10:17:34.837440Z",
+     "iopub.status.idle": "2025-01-30T10:17:34.840888Z",
+     "shell.execute_reply": "2025-01-30T10:17:34.840408Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "34580ed1",
+   "id": "be96ccf4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:01:34.126997Z",
-     "iopub.status.busy": "2025-01-30T10:01:34.126659Z",
-     "iopub.status.idle": "2025-01-30T10:01:35.276005Z",
-     "shell.execute_reply": "2025-01-30T10:01:35.275384Z"
+     "iopub.execute_input": "2025-01-30T10:17:34.842788Z",
+     "iopub.status.busy": "2025-01-30T10:17:34.842415Z",
+     "iopub.status.idle": "2025-01-30T10:17:35.909128Z",
+     "shell.execute_reply": "2025-01-30T10:17:35.908589Z"
     }
    },
    "outputs": [
