--- a/tutorials/k_potentials.ipynb
+++ b/tutorials/k_potentials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "85403585",
+   "id": "3217f215",
    "metadata": {},
    "source": [
     "# Potentials\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "357b3ad2",
+   "id": "940228f9",
    "metadata": {},
    "source": [
     "## Background"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d09ea47",
+   "id": "0289ec94",
    "metadata": {},
    "source": [
     "Consider GRANAD's master equation "
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc0aa2b2",
+   "id": "c9d53be3",
    "metadata": {},
    "source": [
     "$$\\dot{\\rho}(t) = -i [H[t,\\rho(t)], \\rho] + \\mathcal{D}[t, \\rho]$$"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a61d5e77",
+   "id": "baac7755",
    "metadata": {},
    "source": [
     "By default, GRANAD simulates the following dipole-gauge expression for the Hamiltonian including an external electric field $\\vec{E}$"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "929d9a6f",
+   "id": "267e945c",
    "metadata": {},
    "source": [
     "$$H[t,\\rho(t)] = h^{0} + \\vec{E} \\vec{P} + C(\\rho(t) - \\rho^{0})$$"
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c951000",
+   "id": "2e4977e8",
    "metadata": {},
    "source": [
     "where"
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32cd78db",
+   "id": "76d2283d",
    "metadata": {},
    "source": [
     "1. $h^{0}$ is the unperturbed or bare Hamiltonian constructed from localized orbitals.\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13470b55",
+   "id": "081cb86f",
    "metadata": {},
    "source": [
     "You can modify GRANAD's internal representation of the Hamiltonian to include your own potential terms. Here, you have two options:"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f75d503f",
+   "id": "1778052f",
    "metadata": {},
    "source": [
     "1. Define potentials on your own.\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec642203",
+   "id": "77298dfd",
    "metadata": {},
    "source": [
     "The first solution is more flexible, but a bit more complicated, so we will focus on the built-in potentials in this tutorial."
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b98a3d3f",
+   "id": "362a0a0a",
    "metadata": {},
    "source": [
     "## Built-in Potentials"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c37f1d2",
+   "id": "e3c8ddfd",
    "metadata": {},
    "source": [
     "First, we set up a small triangle."
@@ -112,13 +112,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f61fff9c",
+   "id": "31a95a4c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:02:00.416823Z",
-     "iopub.status.busy": "2025-01-30T10:02:00.416370Z",
-     "iopub.status.idle": "2025-01-30T10:02:04.509270Z",
-     "shell.execute_reply": "2025-01-30T10:02:04.508668Z"
+     "iopub.execute_input": "2025-01-30T10:17:58.573415Z",
+     "iopub.status.busy": "2025-01-30T10:17:58.573222Z",
+     "iopub.status.idle": "2025-01-30T10:18:02.180374Z",
+     "shell.execute_reply": "2025-01-30T10:18:02.179763Z"
     }
    },
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d0b6606",
+   "id": "9868ec6f",
    "metadata": {},
    "source": [
     "If we call `flake.master_equation`, the arguments we passed in (e.g., the illumination) are turned into a representation of the Hamiltonian. By default, this representation corresponds to the dipole-gauge model discussed above."
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e12cde",
+   "id": "ed0abc53",
    "metadata": {},
    "source": [
     "This representation will be passed to \"lower-level\" simulation functions. These functions will turn it into arrays and integrate it."
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4349f6f",
+   "id": "3f0475ad",
    "metadata": {},
    "source": [
     "We can directly look at this representation."
@@ -165,13 +165,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "acbbb132",
+   "id": "ec543d19",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:02:04.511463Z",
-     "iopub.status.busy": "2025-01-30T10:02:04.511135Z",
-     "iopub.status.idle": "2025-01-30T10:02:04.515267Z",
-     "shell.execute_reply": "2025-01-30T10:02:04.514642Z"
+     "iopub.execute_input": "2025-01-30T10:18:02.182725Z",
+     "iopub.status.busy": "2025-01-30T10:18:02.182454Z",
+     "iopub.status.idle": "2025-01-30T10:18:02.186509Z",
+     "shell.execute_reply": "2025-01-30T10:18:02.185780Z"
     }
    },
    "outputs": [
@@ -179,7 +179,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'bare_hamiltonian': <function BareHamiltonian.<locals>.<lambda> at 0x7fadec221260>, 'coulomb': <function Coulomb.<locals>.<lambda> at 0x7fadec221580>}\n"
+      "{'bare_hamiltonian': <function BareHamiltonian.<locals>.<lambda> at 0x7fe78e7191c0>, 'coulomb': <function Coulomb.<locals>.<lambda> at 0x7fe78e7194e0>}\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a4392e7",
+   "id": "5067dcce",
    "metadata": {},
    "source": [
     "We see that it is a dictionary. The keys are strings, the values are functions. Each function is a term in the Hamiltonian, identified by the keys"
@@ -199,13 +199,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "646676aa",
+   "id": "bd37dedd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:02:04.517414Z",
-     "iopub.status.busy": "2025-01-30T10:02:04.516954Z",
-     "iopub.status.idle": "2025-01-30T10:02:04.520994Z",
-     "shell.execute_reply": "2025-01-30T10:02:04.520375Z"
+     "iopub.execute_input": "2025-01-30T10:18:02.189203Z",
+     "iopub.status.busy": "2025-01-30T10:18:02.188993Z",
+     "iopub.status.idle": "2025-01-30T10:18:02.194996Z",
+     "shell.execute_reply": "2025-01-30T10:18:02.194350Z"
     }
    },
    "outputs": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b74c67",
+   "id": "29afe718",
    "metadata": {},
    "source": [
     "So, as we said, we have a bare Hamiltonian, and an induced Coulomb interaction. But where is the dipole gauge coupling? Remember that we did not pass in any external illumination, so GRANAD assumes there is none. This can be changed as follows"
@@ -232,13 +232,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "40e8e237",
+   "id": "f92784c9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:02:04.523360Z",
-     "iopub.status.busy": "2025-01-30T10:02:04.522849Z",
-     "iopub.status.idle": "2025-01-30T10:02:04.555920Z",
-     "shell.execute_reply": "2025-01-30T10:02:04.555383Z"
+     "iopub.execute_input": "2025-01-30T10:18:02.197966Z",
+     "iopub.status.busy": "2025-01-30T10:18:02.197515Z",
+     "iopub.status.idle": "2025-01-30T10:18:02.226841Z",
+     "shell.execute_reply": "2025-01-30T10:18:02.226338Z"
     }
    },
    "outputs": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a5ee121",
+   "id": "df197157",
    "metadata": {},
    "source": [
     "We add our own potentials to the Hamiltonian by adding entries to the dictionary, like `hamiltonian_model[\"my_potential\"] = my_potential`. "
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b207bf5b",
+   "id": "764ce915",
    "metadata": {},
    "source": [
     "In choosing `my_potential`, you have several options, documented in the API. For demonstration, we will model a dipole pulse"
@@ -276,13 +276,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "60db775b",
+   "id": "d610f534",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:02:04.557896Z",
-     "iopub.status.busy": "2025-01-30T10:02:04.557686Z",
-     "iopub.status.idle": "2025-01-30T10:02:04.562518Z",
-     "shell.execute_reply": "2025-01-30T10:02:04.561810Z"
+     "iopub.execute_input": "2025-01-30T10:18:02.228887Z",
+     "iopub.status.busy": "2025-01-30T10:18:02.228434Z",
+     "iopub.status.idle": "2025-01-30T10:18:02.232540Z",
+     "shell.execute_reply": "2025-01-30T10:18:02.232054Z"
     }
    },
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24988716",
+   "id": "a5a5265d",
    "metadata": {},
    "source": [
     "We can visualize its impact at any time t. The potential is a function and returns a diagonal matrix in site basis. The arguments to this function will be explained in the tutorial on custom master equations."
@@ -306,13 +306,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a0237f69",
+   "id": "eb628a36",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:02:04.564622Z",
-     "iopub.status.busy": "2025-01-30T10:02:04.564208Z",
-     "iopub.status.idle": "2025-01-30T10:02:07.320837Z",
-     "shell.execute_reply": "2025-01-30T10:02:07.320170Z"
+     "iopub.execute_input": "2025-01-30T10:18:02.234505Z",
+     "iopub.status.busy": "2025-01-30T10:18:02.234005Z",
+     "iopub.status.idle": "2025-01-30T10:18:04.733033Z",
+     "shell.execute_reply": "2025-01-30T10:18:04.732551Z"
     }
    },
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d59afd95",
+   "id": "80cbcdce",
    "metadata": {},
    "source": [
     "We can now include it in the Hamiltonian"
@@ -349,13 +349,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1dab7f80",
+   "id": "5eab6117",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:02:07.322921Z",
-     "iopub.status.busy": "2025-01-30T10:02:07.322696Z",
-     "iopub.status.idle": "2025-01-30T10:02:07.326157Z",
-     "shell.execute_reply": "2025-01-30T10:02:07.325623Z"
+     "iopub.execute_input": "2025-01-30T10:18:04.734966Z",
+     "iopub.status.busy": "2025-01-30T10:18:04.734772Z",
+     "iopub.status.idle": "2025-01-30T10:18:04.738109Z",
+     "shell.execute_reply": "2025-01-30T10:18:04.737466Z"
     }
    },
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fed4ae3",
+   "id": "5a95d46b",
    "metadata": {},
    "source": [
     "To simulate this Hamiltonian instead of the default one, we have to pass it explicitly to the time-domain simulation function"
@@ -374,13 +374,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b7192249",
+   "id": "0ea27f01",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:02:07.328137Z",
-     "iopub.status.busy": "2025-01-30T10:02:07.327947Z",
-     "iopub.status.idle": "2025-01-30T10:02:10.105657Z",
-     "shell.execute_reply": "2025-01-30T10:02:10.104960Z"
+     "iopub.execute_input": "2025-01-30T10:18:04.739987Z",
+     "iopub.status.busy": "2025-01-30T10:18:04.739799Z",
+     "iopub.status.idle": "2025-01-30T10:18:07.382683Z",
+     "shell.execute_reply": "2025-01-30T10:18:07.382085Z"
     }
    },
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b36c69d",
+   "id": "6c4fa69f",
    "metadata": {},
    "source": [
     "You can simulate any number of dipoles (or terms) by adding more keys to the dictionary. **Just name them differently, e.g., \"dipole_1\", \"dipole_2\", to make sure they don't get overwritten.**"
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f3b29a5",
+   "id": "f45c8dfd",
    "metadata": {},
    "source": [
     "Note: The dipole potential above is purely diagonal, i.e. it will miss the intra-atomic dipolar contribution between orbitals $i$ and $j$ connected by a transition dipole moment $\\vec{d}_{ij}$.\n",
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c0ae10c",
+   "id": "5563c3ef",
    "metadata": {},
    "source": [
     "You can use the built-in dipole gauge like `potentials.DipoleGauge( illumination = dipole_electric_field, intra_only = True )`."
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c526d98",
+   "id": "0e0f4736",
    "metadata": {},
    "source": [
     "If you place the dipole at the position of an orbital, the potential is set to zero there."
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7696b7f9",
+   "id": "0da37e21",
    "metadata": {},
    "source": [
     "**Warning: We did not need the illumination argument and so the `result` object contains no information on it. It is populated with zeroes by default**"
@@ -473,13 +473,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1f17c3db",
+   "id": "ba993491",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:02:10.107981Z",
-     "iopub.status.busy": "2025-01-30T10:02:10.107535Z",
-     "iopub.status.idle": "2025-01-30T10:02:10.111713Z",
-     "shell.execute_reply": "2025-01-30T10:02:10.111097Z"
+     "iopub.execute_input": "2025-01-30T10:18:07.384769Z",
+     "iopub.status.busy": "2025-01-30T10:18:07.384400Z",
+     "iopub.status.idle": "2025-01-30T10:18:07.388530Z",
+     "shell.execute_reply": "2025-01-30T10:18:07.387969Z"
     }
    },
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92def62b",
+   "id": "442e6c92",
    "metadata": {},
    "source": [
     "You can still supply an illumination function, which will be used as the attribute."
