deploy: c70269ded775bda19c7e6f35d69bfd23e706fd35

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fabbbfd1",
+   "id": "40253846",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c8315d2",
+   "id": "e68b96c6",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15632d29",
+   "id": "7acc82fb",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42d46e22",
+   "id": "7310861c",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e1014a5",
+   "id": "829f3b20",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6832650f",
+   "id": "6034c2c4",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d7c6ce3",
+   "id": "36cac731",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:26.667527Z",
-     "iopub.status.busy": "2025-01-30T10:17:26.667352Z",
-     "iopub.status.idle": "2025-01-30T10:17:29.753330Z",
-     "shell.execute_reply": "2025-01-30T10:17:29.752787Z"
+     "iopub.execute_input": "2025-01-30T10:29:22.082369Z",
+     "iopub.status.busy": "2025-01-30T10:29:22.082167Z",
+     "iopub.status.idle": "2025-01-30T10:29:25.071754Z",
+     "shell.execute_reply": "2025-01-30T10:29:25.071154Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68373d28",
+   "id": "2e12373b",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a6d4fb",
+   "id": "beb62440",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef530118",
+   "id": "8d428d59",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a97de96e",
+   "id": "0ea3dc00",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a170ba08",
+   "id": "bab898e6",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d886785",
+   "id": "0cf06c97",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2a7b38c",
+   "id": "3003680f",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86bff71d",
+   "id": "23d3cdcf",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "92dd1f77",
+   "id": "330f2c9f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:29.755680Z",
-     "iopub.status.busy": "2025-01-30T10:17:29.755218Z",
-     "iopub.status.idle": "2025-01-30T10:17:31.971337Z",
-     "shell.execute_reply": "2025-01-30T10:17:31.970699Z"
+     "iopub.execute_input": "2025-01-30T10:29:25.073948Z",
+     "iopub.status.busy": "2025-01-30T10:29:25.073684Z",
+     "iopub.status.idle": "2025-01-30T10:29:27.100540Z",
+     "shell.execute_reply": "2025-01-30T10:29:27.099958Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bd72d8e",
+   "id": "53abc535",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7e38d0ad",
+   "id": "85769df3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:31.973703Z",
-     "iopub.status.busy": "2025-01-30T10:17:31.973066Z",
-     "iopub.status.idle": "2025-01-30T10:17:31.976910Z",
-     "shell.execute_reply": "2025-01-30T10:17:31.976295Z"
+     "iopub.execute_input": "2025-01-30T10:29:27.102407Z",
+     "iopub.status.busy": "2025-01-30T10:29:27.102154Z",
+     "iopub.status.idle": "2025-01-30T10:29:27.105769Z",
+     "shell.execute_reply": "2025-01-30T10:29:27.105167Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c3b2494",
+   "id": "ad89da9a",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f9a3368",
+   "id": "1b585842",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba85853f",
+   "id": "8c71fb99",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "103a7a58",
+   "id": "e5e0fd76",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "79bafb64",
+   "id": "5bd92e22",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:31.978850Z",
-     "iopub.status.busy": "2025-01-30T10:17:31.978536Z",
-     "iopub.status.idle": "2025-01-30T10:17:32.025141Z",
-     "shell.execute_reply": "2025-01-30T10:17:32.024577Z"
+     "iopub.execute_input": "2025-01-30T10:29:27.107747Z",
+     "iopub.status.busy": "2025-01-30T10:29:27.107415Z",
+     "iopub.status.idle": "2025-01-30T10:29:27.152896Z",
+     "shell.execute_reply": "2025-01-30T10:29:27.152330Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49987a7d",
+   "id": "4d43717a",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a2dda944",
+   "id": "9da59cc0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:32.027059Z",
-     "iopub.status.busy": "2025-01-30T10:17:32.026864Z",
-     "iopub.status.idle": "2025-01-30T10:17:32.100959Z",
-     "shell.execute_reply": "2025-01-30T10:17:32.100424Z"
+     "iopub.execute_input": "2025-01-30T10:29:27.154753Z",
+     "iopub.status.busy": "2025-01-30T10:29:27.154562Z",
+     "iopub.status.idle": "2025-01-30T10:29:27.223846Z",
+     "shell.execute_reply": "2025-01-30T10:29:27.223316Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c539b6",
+   "id": "b730d835",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c97f6017",
+   "id": "d46a3010",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dfcdb5a4",
+   "id": "e9a3c499",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:32.102739Z",
-     "iopub.status.busy": "2025-01-30T10:17:32.102550Z",
-     "iopub.status.idle": "2025-01-30T10:17:32.133979Z",
-     "shell.execute_reply": "2025-01-30T10:17:32.133461Z"
+     "iopub.execute_input": "2025-01-30T10:29:27.226017Z",
+     "iopub.status.busy": "2025-01-30T10:29:27.225632Z",
+     "iopub.status.idle": "2025-01-30T10:29:27.255656Z",
+     "shell.execute_reply": "2025-01-30T10:29:27.255084Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a7d0cd5",
+   "id": "8a6f19f9",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33a77e4",
+   "id": "e4273802",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdc36ec9",
+   "id": "fd1bc456",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "755d99d4",
+   "id": "3f3e1a13",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c9a1ffc",
+   "id": "7774450b",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d496b393",
+   "id": "bb56afb9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:32.136091Z",
-     "iopub.status.busy": "2025-01-30T10:17:32.135711Z",
-     "iopub.status.idle": "2025-01-30T10:17:32.140075Z",
-     "shell.execute_reply": "2025-01-30T10:17:32.139549Z"
+     "iopub.execute_input": "2025-01-30T10:29:27.257634Z",
+     "iopub.status.busy": "2025-01-30T10:29:27.257426Z",
+     "iopub.status.idle": "2025-01-30T10:29:27.261867Z",
+     "shell.execute_reply": "2025-01-30T10:29:27.261332Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b347418",
+   "id": "5183a93d",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "69dfaf1d",
+   "id": "187ea2ee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:32.141930Z",
-     "iopub.status.busy": "2025-01-30T10:17:32.141626Z",
-     "iopub.status.idle": "2025-01-30T10:17:32.144634Z",
-     "shell.execute_reply": "2025-01-30T10:17:32.143987Z"
+     "iopub.execute_input": "2025-01-30T10:29:27.263759Z",
+     "iopub.status.busy": "2025-01-30T10:29:27.263386Z",
+     "iopub.status.idle": "2025-01-30T10:29:27.266587Z",
+     "shell.execute_reply": "2025-01-30T10:29:27.265984Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7a7f8b2",
+   "id": "aab371ef",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "60258134",
+   "id": "cd86136a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:32.146404Z",
-     "iopub.status.busy": "2025-01-30T10:17:32.146050Z",
-     "iopub.status.idle": "2025-01-30T10:17:34.830217Z",
-     "shell.execute_reply": "2025-01-30T10:17:34.829613Z"
+     "iopub.execute_input": "2025-01-30T10:29:27.268347Z",
+     "iopub.status.busy": "2025-01-30T10:29:27.268150Z",
+     "iopub.status.idle": "2025-01-30T10:29:29.915320Z",
+     "shell.execute_reply": "2025-01-30T10:29:29.914768Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2a3323b",
+   "id": "30d554d5",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "848432bf",
+   "id": "b5e6b5e8",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da395d32",
+   "id": "12a69c36",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acdabcb3",
+   "id": "c17e12ac",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2db43be7",
+   "id": "9c80b130",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:34.832296Z",
-     "iopub.status.busy": "2025-01-30T10:17:34.831924Z",
-     "iopub.status.idle": "2025-01-30T10:17:34.835820Z",
-     "shell.execute_reply": "2025-01-30T10:17:34.835281Z"
+     "iopub.execute_input": "2025-01-30T10:29:29.917216Z",
+     "iopub.status.busy": "2025-01-30T10:29:29.917026Z",
+     "iopub.status.idle": "2025-01-30T10:29:29.920926Z",
+     "shell.execute_reply": "2025-01-30T10:29:29.920257Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fbf2c6bbec0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fb71804ca40>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a00a19e7",
+   "id": "af038dba",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7481db87",
+   "id": "ab80c2fc",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45c69a5c",
+   "id": "dc3babd3",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec59531",
+   "id": "6bb8025f",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1c5a00a2",
+   "id": "e7b9c9b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:34.837622Z",
-     "iopub.status.busy": "2025-01-30T10:17:34.837440Z",
-     "iopub.status.idle": "2025-01-30T10:17:34.840888Z",
-     "shell.execute_reply": "2025-01-30T10:17:34.840408Z"
+     "iopub.execute_input": "2025-01-30T10:29:29.922857Z",
+     "iopub.status.busy": "2025-01-30T10:29:29.922536Z",
+     "iopub.status.idle": "2025-01-30T10:29:29.925573Z",
+     "shell.execute_reply": "2025-01-30T10:29:29.924929Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "be96ccf4",
+   "id": "5461175b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T10:17:34.842788Z",
-     "iopub.status.busy": "2025-01-30T10:17:34.842415Z",
-     "iopub.status.idle": "2025-01-30T10:17:35.909128Z",
-     "shell.execute_reply": "2025-01-30T10:17:35.908589Z"
+     "iopub.execute_input": "2025-01-30T10:29:29.927438Z",
+     "iopub.status.busy": "2025-01-30T10:29:29.927078Z",
+     "iopub.status.idle": "2025-01-30T10:29:31.005620Z",
+     "shell.execute_reply": "2025-01-30T10:29:31.005019Z"
     }
    },
    "outputs": [
